Add multistage building for docker and proper db connection

--- a/BackEnd/Dockerfile
+++ b/BackEnd/Dockerfile
@@ -1,14 +1,26 @@
-# Используем базовый образ Python
-FROM python:3.10-slim
+# Первый этап: установка зависимостей
+FROM python:3.10-slim AS builder
 
-# Устанавливаем рабочую директорию в контейнере
+# Устанавливаем рабочую директорию
 WORKDIR /app
 
-# Копируем файлы проекта в контейнер
+# Копируем только файл с зависимостями
+COPY requirements.txt .
+
+# Устанавливаем зависимости в отдельный слой
+RUN pip install --no-cache-dir --prefix=/install -r requirements.txt
+
+# Второй этап: финальный образ
+FROM python:3.10-slim
+
+# Устанавливаем рабочую директорию
+WORKDIR /app
+
+# Копируем установленные зависимости из предыдущего этапа
+COPY --from=builder /install /usr/local
+
+# Копируем файлы проекта
 COPY . .
 
-# Устанавливаем зависимости
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Применяем миграции при старте
+# Команда для запуска приложения
 CMD ["sh", "-c", "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"]
