--- a/BackEnd/docker-compose.yml
+++ b/BackEnd/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   web:
     build: .
     container_name: medchain_web
-    command: python manage.py runserver 0.0.0.0:8000
+    command: python manage.py migrate && python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/app
     ports:
@@ -25,6 +25,8 @@ services:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
       POSTGRES_DB: medchain_db
+    ports:
+      - "15432:5432"
 
 volumes:
   pg_data:
